--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
               </div>
             </div>
             <div class="menu__right">
-              <div class="menu__nav">
+              <div class="menu__nav burger">
                 <a href="#"><img src="img/menu.png" alt="" /></a>
               </div>
               <div class="menu__nav">
@@ -406,5 +406,7 @@
       </footer>
       <!-- Footer end -->
     </div>
+
+    <script src="script.js"></script>
   </body>
 </html>
